<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.c4-soft.springaddons</groupId>
		<artifactId>spring-addons</artifactId>
		<version>9.0.0-M1-SNAPSHOT</version>
		<relativePath>..</relativePath>
	</parent>
	<groupId>com.c4-soft.springaddons.samples</groupId>
	<artifactId>spring-addons-samples</artifactId>
	<packaging>pom</packaging>

	<properties>
		<java.version>17</java.version>
		<spring-cloud.version>2024.0.0</spring-cloud.version>

		<!-- OpenAPI -->
		<io.swagger.core.v3.version>2.2.19</io.swagger.core.v3.version>
		<springdoc-openapi.output-dir>${project.basedir}</springdoc-openapi.output-dir>
		<integration-tests.scheme>http</integration-tests.scheme>
		<integration-tests.hostname>localhost</integration-tests.hostname>
		<integration-tests.port>8080</integration-tests.port>
	</properties>

	<modules>
		<module>webflux-introspecting-default</module>
		<module>webflux-introspecting-oauthentication</module>
		<module>webflux-jwt-default</module>
		<module>webflux-jwt-oauthentication</module>
		<module>webmvc-introspecting-default</module>
		<module>webmvc-introspecting-oauthentication</module>
		<module>webmvc-jwt-default</module>
		<module>webmvc-jwt-default-jpa-authorities</module>
		<module>webmvc-jwt-oauthentication</module>
		<module>tutorials</module>
		<!--module>springdoc-openapi-2494-reactive</module>
		<module>springdoc-openapi-2494-servlet</module-->
        <module>oauth2-bff-reactive</module>
        <module>oauth2-bff-servlet</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>${io.swagger.core.v3.version}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations-jakarta</artifactId>
				<version>${io.swagger.core.v3.version}</version>
			</dependency>

			<dependency>
				<groupId>com.c4-soft.springaddons</groupId>
				<artifactId>spring-addons-starter-oidc</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.c4-soft.springaddons</groupId>
				<artifactId>spring-addons-oauth2-test</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.c4-soft.springaddons</groupId>
				<artifactId>spring-addons-starter-oidc-test</artifactId>
				<version>${project.version}</version>
			</dependency>


			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${org.mapstruct.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok-mapstruct-binding</artifactId>
				<version>${lombok-mapstruct-binding.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</path>
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${org.mapstruct.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>openapi-webmvc</id>
			<dependencies>
				<dependency>
					<groupId>org.springdoc</groupId>
					<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
					<version>${springdoc-openapi.version}</version>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>pre-integration-test</id>
								<goals>
									<goal>start</goal>
								</goals>
							</execution>
							<execution>
								<id>post-integration-test</id>
								<goals>
									<goal>stop</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.springdoc</groupId>
						<artifactId>springdoc-openapi-maven-plugin</artifactId>
						<version>${springdoc-openapi-maven-plugin.version}</version>
						<configuration>
							<apiDocsUrl>
								${integration-tests.scheme}://${integration-tests.hostname}:${integration-tests.port}/v3/api-docs</apiDocsUrl>
							<outputFileName>${project.artifactId}.openapi.json</outputFileName>
							<outputDir>${springdoc-openapi.output-dir}</outputDir>
							<skip>false</skip>
						</configuration>
						<executions>
							<execution>
								<id>integration-test</id>
								<goals>
									<goal>generate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>openapi-webflux</id>
			<dependencies>
				<dependency>
					<groupId>org.springdoc</groupId>
					<artifactId>springdoc-openapi-starter-webflux-api</artifactId>
					<version>${springdoc-openapi.version}</version>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>pre-integration-test</id>
								<goals>
									<goal>start</goal>
								</goals>
							</execution>
							<execution>
								<id>post-integration-test</id>
								<goals>
									<goal>stop</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.springdoc</groupId>
						<artifactId>springdoc-openapi-maven-plugin</artifactId>
						<version>${springdoc-openapi-maven-plugin.version}</version>
						<configuration>
							<apiDocsUrl>
								${integration-tests.scheme}://${integration-tests.hostname}:${integration-tests.port}/v3/api-docs</apiDocsUrl>
							<outputFileName>${project.artifactId}.openapi.json</outputFileName>
							<outputDir>${springdoc-openapi.output-dir}</outputDir>
							<skip>false</skip>
						</configuration>
						<executions>
							<execution>
								<id>integration-test</id>
								<goals>
									<goal>generate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-release</id>
			<name>Spring release</name>
			<url>https://repo.spring.io/release</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>spring-milestone</id>
			<name>Spring milestone</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>spring-snapshot</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</pluginRepository>
	</pluginRepositories>
	<repositories>
		<repository>
			<id>spring-release</id>
			<name>Spring release</name>
			<url>https://repo.spring.io/release</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-milestone</id>
			<name>Spring milestone</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-snapshot</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>

</project>
